--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,51 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.cont{
+    max-width:900px;
+    margin: 0 auto;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider{
+    width: 700px;
+    height: 300px;
+    background-color: pink;
+    position: relative;
+}
+
+.up, .down{
+    position:absolute;
+    color: gray;
+    font-size: 1.25rem;
+    left: 50%;
+    transform: translate(-50% 0);
+    z-index: 10;
+    cursor: pointer;
+}
+
+.up{
+    top:10px;
+}
+.down{
+    bottom: 10px;
+}
+
+.item{
+    height: 100%;
+    display: none;
+}
+
+.item img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.show{
+    display: block;
+}
